apps/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nextcloud
  name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: nextcloud-config-claim
      - name: data
        persistentVolumeClaim:
          claimName: nextcloud-data-claim
      - name: local-home
        persistentVolumeClaim:
          claimName: nextcloud-local-home-claim
      - name: nextcloud-db
        persistentVolumeClaim:
          claimName: nextcloud-db-claim
      containers:
      - name: nextcloud
        image: linuxserver/nextcloud:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 443
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1024Mi"
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: data
        - mountPath: /ext-data/home/jphuc96
          name: local-home
      - name: nextcloud-db
        image: mariadb:latest
        imagePullPolicy: IfNotPresent
        args:
        - --transaction-isolation=READ-COMMITTED
        - --binlog-format=ROW
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: "125m"
            memory: "256Mi"
          limits:
            cpu: "250m"
            memory: "512Mi"
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: nextcloud-db
      restartPolicy: Always
