apps/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextcloud
  name: nextcloud
spec:
  ports:
  - name: https
    port: 443
    targetPort: 443
  - name: mariadb
    port: 3306
    targetPort: 3306
  selector:
    app: nextcloud
